# fractal_governance

./: .bazelrc  .gitignore  LICENSE  Pipfile  README.md  WORKSPACE  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
data/: BUILD  genesis-account_status.csv  genesis-late_consensus.csv  genesis-teams.csv  genesis-weekly_measurements.csv  genesis-weekly_rank.csv
data/test/addendum_1/: Stats_post-Aug_6_Dist_Portions.csv
fractal_governance/: BUILD  constants.py  dataset.py  math.py  plots.py  statistics.py  token_supply.py  util.py
fractal_governance/addendum_1/: __init__.py  constants.py  dataset.py  token_supply.py  weighted_means.py
fractal_governance/measurement_uncertainty/: dataset.py  plots.py
fractal_governance/measurement_uncertainty/streamlit/: genesis_fractal.py
fractal_governance/streamlit/: genesis_fractal.py
notebook/: README.ipynb
test/: BUILD  test_dataset.py  test_fractal_governance.py  test_math.py  test_plots.py  test_statistics.py  test_util.py
test/addendum_1/: BUILD  test_addendum_1.py  test_constants.py  test_dataset.py  test_weighted_means.py
