[metadata]
name = fractal_governance
version = 0.0.1
author = Matt Langston
author_email = matt-langston@users.noreply.github.co
description = Fractal Governance Datasets, Jupyter notebooks and Streamlit dashboards
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/matt-langston/fractal_governance
project_urls = 
    Documentation = https://fractal_governance.readthedocs.io
    Source = https://github.com/matt-langston/fractal_governance
    Tracker = https://github.com/matt-langston/fractal_governance/issues
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Framework :: Jupyter :: JupyterLab
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Security :: Cryptography
    Topic :: Sociology

[options]
packages = find:
python_requires = >=3.9
